--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@maptiler/sdk": "^3.0.2",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.0.17",
+    "@vis.gl/react-google-maps": "^1.5.2",
+    "leaflet": "^1.9.4",
     "mapbox-gl": "^3.11.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-map-gl": "^8.0.2",
     "react-router-dom": "^7.4.1",
     "tailwindcss": "^4.0.17"
